Popravljeno brisanje korisnika i kategorije

--- a/views/kategorije/izmena_kategorije.ejs
+++ b/views/kategorije/izmena_kategorije.ejs
@@ -109,7 +109,7 @@
                     
 
                     <!-- Odustani -->
-                    <button type="button" class="btn btn-danger" onclick="window.history.back()">Odustani</button>
+                    <a type="button" href = '/sve_kategorije/kategorija/<%-kategorija[0].id%>' class="btn btn-danger">Odustani</a>
                     
 
 
