--- a/views/kategorije/kategorija.ejs
+++ b/views/kategorije/kategorija.ejs
@@ -111,6 +111,8 @@
                                         <div class="modal-body">
                                             Da li ste sigurni da želite da obrišete kategoriju :<br> 
                                             <span class="text-warning"><%-kategorija[0].naziv%></span> 
+                                            <br>
+                                            <span class="small"> U ovoj kategoriji možda postoje poslovi koji se nakon brisanja kategoriju takođe brišu trajno sa sajta.</span>
                                         </div>
                                         <!-- /Pitanje -->
 
