--- a/views/korisnici/izmena_korisnika.ejs
+++ b/views/korisnici/izmena_korisnika.ejs
@@ -77,9 +77,49 @@
     <!-- Brisanej profila -->
     <div class="container justify-content-end d-flex">
         <form action="/svi_korisnici/profil/<%-korisnik[0].id%>/brisanje_profila" method="POST" >
-            <button type="submit" class="btn btn-outline-danger">     
+            <button type="button" class="btn btn-outline-danger" data-toggle="modal" data-target="#modalBrisanjeProfila">     
                 Obrišite svoj profil
             </button>    
+
+            <!-- Modal za brisanje -->
+            <div class="modal fade text-center" id="modalBrisanjeProfila" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered" role="document">
+                    
+                <div class="modal-content bg-dark">
+                    <div class="modal-header">
+
+                    <h5 class="modal-title" id="exampleModalLongTitle">Brisanje profila</h5>
+                    
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true" class="text-danger">&times;</span>
+                    </button>
+                    
+                    </div>
+                    <!-- Pitanje -->
+                    <div class="modal-body">
+                        Da li ste sigurni da želite da se obrišete svoj profil? <br>
+                        Sa brisanjem profila trajno brišete sve poslove koje ste postavili, 
+                        kao i sve prijave poslova, na kojima ste se prijavl! 
+                        
+                    </div>
+                    <!-- /Pitanje -->
+
+
+
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Odustani</button>
+                        <!-- Potvrda -->
+                        <button type="submit" class="btn btn-primary">Potvrdi</button>
+                        <!-- Potvrda -->
+                    </div>
+                </div>
+                </div>
+            </div>
+            <!-- / Modal za brisanje-->
+
+
+
+
         </form>
     </div>
     <!-- /Brisanje profla-->
