--- a/views/log_reg/login.ejs
+++ b/views/log_reg/login.ejs
@@ -164,7 +164,7 @@
 
 
             <!-- Prijavi se-->
-                <button type="submit" class = 'btn btn-primary mt-3'>Uloguj se</button>
+                <button type="submit" class = 'btn btn-primary mt-1' style="width: 100%;" >Uloguj se</button>
             <!-- /Prijavi se-->  
             <% if(obavestenje == '') {%>  
             <br><br>
