--- a/views/poslovi/posao.ejs
+++ b/views/poslovi/posao.ejs
@@ -323,7 +323,7 @@
                      <!-- Kartica -->
                     <div class="card text-white bg-dark mb-3">
                         <!-- Naslov kartice -->
-                        <div class="card-header">Prijavljeni korisnici : <b><%-ukupno%></b></div>
+                        <div class="card-header">Prijavljeni korisnici : <b><%-posao[0].br_prijava%></b></div>
 
 
                         <!-- Telo kartice-->
