Popravljeno azuriranje kolone br_poslova, iz tabele poslovi

--- a/views/log_reg/registracija.ejs
+++ b/views/log_reg/registracija.ejs
@@ -133,7 +133,7 @@
 
                 <br>
                 <!-- Log in-->
-                <span class="h6 justify-content-center d-flex">Već imate nalog - <a href = '/login'>ulogujte se.</a></span>
+                <span class="h6 justify-content-center d-flex">Već imate nalog -<a href = '/login'>&nbsp; ulogujte se.</a></span>
                 <!-- /Log in-->
 
         </form>
